--- a/src/Pages/Inscription/Inscription.module.scss
+++ b/src/Pages/Inscription/Inscription.module.scss
@@ -7,6 +7,7 @@
     p{
         color: brown;
     }
+    // Nous avons différencié cette class de l'autre class "container". Cette class est bien la class container situé dans l'élément avec la class "div"
     .container{
         background-color: blueviolet;
         p{
