--- a/src/Projet/Docknotes/Components/Navbar/DotsColor/DotsColor.module.scss
+++ b/src/Projet/Docknotes/Components/Navbar/DotsColor/DotsColor.module.scss
@@ -1,9 +1,9 @@
 .button{
     display: block;
     cursor: pointer;
-    margin: 1vw;
     border: none;
-    width: 1.5vw;
-    height: 1.5vw;
+    width: 2vw;
+    height: 2vw;
     border-radius: 50%;
+    margin: 1vw 0;
 }
