--- a/src/Projet/Docknotes/Components/Navbar/NavbarDocknotes.module.scss
+++ b/src/Projet/Docknotes/Components/Navbar/NavbarDocknotes.module.scss
@@ -12,4 +12,20 @@
         font-weight: 300;
         margin-bottom: 3vw;
     }
+    .back{
+        position: fixed;
+        bottom: 1em;
+        background-color: #000;
+        height: 3em;
+        width: 3em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        a{
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.3em;
+        }
+    }
 }
